# pulumi-file

./: .gitignore  .golangci.yml  .goreleaser.yml  Makefile  README.md  docker-compose.yml  go.work  go.work.sum  pulumi-file.sublime-workspace
.github/workflows/: goreleaser.yaml
examples/simple-go/: Pulumi.yaml  go.mod  go.sum  main.go
examples/simple-typescript/: Pulumi.yaml  index.ts  package.json
misc/ssh/: id_rsa  id_rsa.pub
provider/: go.mod  go.sum
provider/cmd/pulumi-gen-file/: main.go
provider/cmd/pulumi-resource-file/: main.go  schema.json
provider/pkg/provider/: provider.go
provider/pkg/provider/remote/: baseOutputs.go  connection.go  file.go  fileController.go  fileOperations.go
provider/pkg/resources/: remote.go  types.go
provider/pkg/transport/: ssh.go
sdk/: go.mod  go.sum
sdk/dotnet/: Provider.cs  Pulumi.File.csproj  Utilities.cs
sdk/dotnet/Remote/: File.cs  README.md
sdk/dotnet/Remote/Inputs/: ConnectionArgs.cs  ProxyConnectionArgs.cs
sdk/go/file/: doc.go  init.go  provider.go  pulumi-plugin.json  pulumiTypes.go  pulumiUtilities.go  remote.go
sdk/java/: build.gradle  settings.gradle
sdk/nodejs/: index.ts  package.json  provider.ts  remote.ts  tsconfig.json  utilities.ts
sdk/nodejs/remote/: file.ts  index.ts
sdk/nodejs/scripts/: install-pulumi-plugin.js
sdk/nodejs/types/: input.ts  output.ts
sdk/python/: README.md  pyproject.toml
sdk/python/pulumi_file/: __init__.py  _utilities.py  provider.py  pulumi-plugin.json
sdk/python/pulumi_file/remote/: __init__.py  _inputs.py  file.py  outputs.py
(+15 files in other folders)
