[project]
  name = "pulumi_file"
  description = "The Pulumi File Provider enables you to create files either locally or remotely as part of the Pulumi resource model."
  dependencies = ["parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "file", "category/utility", "kind/native"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://pulumi.com"
    Repository = "https://github.com/spigell/pulumi-file"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_file = ["py.typed", "pulumi-plugin.json"]
